--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,19 @@
 name: continuous-integration
-# on:
-#   push:
-#     tags:
-#       - 'v*'
 on: [push]
 
-permissions:
-  contents: write
-      
 jobs:
-  linux:
+  linux-os:
     runs-on: ubuntu-20.04
     steps:
-       - name: Checkout
-         uses: actions/checkout@v3
-       - name: build appimage
-         run: ./build-love-appimage.sh
-      - name: Save Artefact
-        uses: actions/upload-artifact@v3
-        with:
-          name: love-11.5-lua5.4-${{ github.sha }}.AppImage
-          path: /release/love-11.5-lua5.4.AppImage
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: build appimage
+      run: ./build-love-appimage.sh
+    - name: Save Artefact
+      uses: actions/upload-artifact@v3
+      with:
+        name: love-11.5-lua5.4-${{ github.sha }}.AppImage
+        path: /release/love-11.5-lua5.4.AppImage
        # - name: Create release
        #   env:
        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
