--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,39 @@ jobs:
       with:
         name: love-11.5-lua5.4-${{ github.sha }}.AppImage
         path: release/love-11.5-lua5.4.AppImage
-       # - name: Create release
-       #   env:
-       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       #     tag: ${{ github.ref_name }}
-       #   run: |
-       #     gh release create "$tag" \
-       #     '/release/love-11.5-lua5.4.AppImage#love-11.5-lua5.4.AppImage' \
-       #     --repo="$GITHUB_REPOSITORY" \
-       #     --title="${tag#v}" \
-       #     --generate-notes
+  # windows-os:
+  #   runs-on: windows-latest
+  #   strategy:
+  #     matrix:
+  #       platform: [Win32, x64]
+  #   steps:
+  #   - name: Clone Megasource
+  #     uses: actions/checkout@v3
+  #     with:
+  #       path: megasource
+  #       repository: love2d/megasource
+  #       ref: main
+  #   - name: Checkout
+  #     uses: actions/checkout@v3
+  #     with:
+  #       path: megasource/libs/love
+  #   - name: Configure
+  #     shell: cmd
+  #     env:
+  #       PLATFORM: ${{ matrix.platform }}
+  #     run: cmake -Bbuild -Hmegasource -T v142 -A %PLATFORM% -DCMAKE_INSTALL_PREFIX=%CD%\install
+  #   - name: Install
+  #     shell: cmd
+  #     run: cmake --build build --config Release --target install -j2
+  #   - name: Artifact
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       name: love-windows-${{ matrix.platform }}
+  #       path: install
+  #   - name: Artifact JIT Modules
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       name: love-windows-jitmodules-${{ matrix.platform }}
+  #       path: build/libs/LuaJIT/src/jit/*.lua
 
            
