--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
     - name: Save Artefact
       uses: actions/upload-artifact@v4
       with:
-        name: love-11.5-lua5.4-${{ github.sha }}.AppImage
+        name: love-11.5-lua5.4-AppImage
         path: release/love-11.5-lua5.4.AppImage
   windows-os:
     runs-on: windows-latest
     strategy:
       matrix:
-        platform: [Win32]
+        platform: [Win32] #, x64
     steps:
     - name: Clone Megasource
       uses: actions/checkout@v3
@@ -36,13 +36,13 @@ jobs:
       shell: cmd
       env:
         PLATFORM: ${{ matrix.platform }}
-      run: cmake -Bbuild -Hmegasource -T v142 -A %PLATFORM% -DCMAKE_INSTALL_PREFIX=%CD%\install -DLuaJIT=0 -DLUA_54=1
+      run: cmake -Bbuild -Hmegasource -T v142 -A %PLATFORM% -DCMAKE_INSTALL_PREFIX=%CD%\install -DLuaJIT=OFF -DLUA_54=ON
     - name: Install
       shell: cmd
       run: cmake --build build --config Release --target install -j2
     - name: Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: love-windows-${{ matrix.platform }}
+        name: love-11.5-lua5.4-${{ matrix.platform }}
         path: install
            
